--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        @import url('./css/main.css');
         @import url('./css/styles.css');
+        @import url('./css/styles2.css');
     </style>
     <title>Document</title>
 </head>
