--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        @import url('./css/Main.css');
         @import url('./css/styles.css');
-        @import url('./css/styles2.css');
     </style>
     <title>Document</title>
 </head>
@@ -29,7 +29,7 @@
                     <header>
                         <nav>
                             <ul>
-                                <li><a href="homepage.html">Homepage</a></li>
+                                <li><a href="index.html">Homepage</a></li>
                                 <li><a href="CSS grid assignment.html">Gallery</a></li>
                                 <li><a href="#">Placeholder</a></li>
                                 <li><a href="#">Placeholder</a></li>
