--- a/CSS grid assignment.html
+++ b/CSS grid assignment.html
@@ -51,7 +51,7 @@
         </div>
         <h2>CSS Grid Assignment
 <div class="gallery-style-1">
-
+    <h2> gallery style 1</h2>
         <div class="gallery-grid">
             <div class="card">1</div>
             <div class="horizontal-rectangle">
@@ -76,6 +76,7 @@
 <hr>
 <br>
 <div class="gallery-style-2">
+    <h2> gallery style 2</h2>
     <div class="gallery-grid">
         <div class="card">1</div>    
         <div class="card">2</div>
@@ -93,6 +94,7 @@
 <hr>
 <br>
 <div class="gallery-style-3">
+    <h2> gallery style 3</h2>
     <div class="gallery-grid">
         <div class="horizontal-rectangle">
         <div class="card">1</div>    
