--- a/CSS grid assignment.html
+++ b/CSS grid assignment.html
@@ -46,7 +46,7 @@
                 <h2>
                    Gallery
                 </h2>
-               
+               <span> Rijaal Mahoney</span>
             </div>
         </div>
         <h2>CSS Grid Assignment
