--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         <div class="header">
             <header id="stickypost"> <span>welcome to my website </span></header>
+            
             <br>
             <hr>
             <br>
@@ -46,6 +47,7 @@
                 <h2>
                     Welcome to my website
                 </h2>
+                <span>Rijaal Mahoney</span>
             </div>
         </div>
 
