--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="footer --foottext">
                     <div>
                         <h1>
-                            Example Website
+                            Example Website RMahoney
                         </h1>
 
                         <sub>
